css/style.css
body{
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: "Roboto";
    color: white;
    margin: 0;
}
.header-wrap, .footer{
    background-color: #372b1f;
}
.header-wrap{
    display: flex;
    justify-content: center;
}
.header{
    display: flex;
    flex-direction: column;
    width: 1000px;
    overflow-x: hidden;
}
.top{
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 50px;
}
.bottom{
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 400px;
}
.logo{
    font-size: 24px;
    color: #F9FAF8;
    font-weight: 800;
}
ul{
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 16px;
}
a{
    text-decoration: none;
    color: white;
}
.about{
    width: 500px;
}
.about > button{
    margin-top: 16px;
}
.title{
    font-weight: 800;
    color: #F9FAF8;
    font-size: 48px;
}
.text, li > a{
    font-size: 18px;
}
.text{
    color: #E5E7EB;
}
button{
    background-color: #f69637;
    color: white;
    border: 2px solid #f69637;
    border-radius: 5px;
    padding: 4px 8px;
    font-weight: bold;
    cursor: pointer;
}
img{
    width: 300px;
    height: 200px;;
}
.info{
    height: 400px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 32px;
    overflow-x: hidden;
}
.items{
    display: flex;
    justify-content: center;
    gap: 64px;
}
.info-header{
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
    text-align: center;
}
.square{
    border: 5px solid #f69637;
    border-radius: 10px;
    height: 100px;
    width: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.square > p{
    color: #f69637;
    margin: 0;
    font-size: 50px;
}
.item{
    width: 105px;
}
.item > p{
    color: #1F2937;
    text-align: center;
}
.quote-wrap{
    background-color: #E5E7EB;
    height: 350px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.quote{
    width: 800px;
    display: flex;
    flex-direction: column;
}
.quote-text{
    color: #1F2937;
    font-size: 36px;
    font-style: italic;
    font-weight: 300;  
}
.author{
    font-size: 18px;
    font-weight: bold;
    color: black;
    align-self: flex-end;
}
.signup{
    height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.box{
    background-color: #f69637;
    border-radius: 5px;
    padding: 32px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 1000px;
}
.box-header{
    font-weight: 800;
}
.box > button{
    border: 2px solid white;
}
.footer{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 70px;
}
.footer-content{
    text-align: center;
}
.footer-content a{
    color: #f69637;
}

